--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<a href="lesson_02/index.html">Домашня робота №2</a>
 			</li>
 			<li>
-				<a href="homework_3/index.html">Домашня робота №3</a>
+				<a href="lesson_03/index.html">Домашня робота №3</a>
 			</li>
 		</ul>
 	</div>
