--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 			<li>
 				<a href="lesson_03/index.html">Домашня робота №3</a>
 			</li>
+			<li>
+				<a href="lesson_04/index.html">Домашня робота №2</a>
+			</li>
 		</ul>
 	</div>
 </body>
