--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 			<li>
 				<a href="lesson_04/index.html">Домашня робота №4</a>
 			</li>
+			<li>
+				<a href="lesson_05/index.html">Домашня робота №5</a>
+			</li>
 		</ul>
 	</div>
 </body>
