some changes in homework #5

--- a/lesson_05/index.html
+++ b/lesson_05/index.html
@@ -30,7 +30,7 @@
 				</div>
 
 				<div class="cards">
-					<div class="card indent card-fall">
+					<div class="card indent">
 						<div class="card-content">
 							<img src="img/building.svg" class="card-img" alt="building">
 							<h5 class="card-title">Risk Management</h5>
@@ -39,7 +39,7 @@
 						</div>
 					</div>
 
-					<div class="card indent">
+					<div class="card indent card-fall">
 						<div class="card-content">
 							<img src="img/book.svg" class="card-img" alt="book">
 							<h5 class="card-title">Compliance Management</h5>
@@ -48,7 +48,7 @@
 						</div>
 					</div>
 					
-					<div class="card indent card-hover card-fall">
+					<div class="card indent card-hover">
 						<div class="card-content">
 							<img src="img/stack.svg" class="card-img" alt="stack">
 							<h5 class="card-title">SOX Management</h5>
@@ -59,7 +59,7 @@
 						</div>
 					</div>
 
-					<div class="card">
+					<div class="card card-fall">
 						<div class="card-content">
 							<img src="img/speaker.svg" class="card-img" alt="speaker">
 							<h5 class="card-title">Internal Audit Streamlined
