--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 				<li>
 					<a href="lesson_06/index.html">Домашня робота №6</a>
 				</li>
+				<li>
+					<a href="lesson_07/index.html">Домашня робота №7</a>
+				</li>
 			</ul>
 		</div>
 	</body>
