--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 				<li>
 					<a href="lesson_07/index.html">Домашня робота №7</a>
 				</li>
+				<li>
+					<a href="lesson_08/index.html">Домашня робота №8</a>
+				</li>
 			</ul>
 		</div>
 	</body>
