--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 				<li>
 					<a href="lesson_08/index.html">Домашня робота №8</a>
 				</li>
+				<li>
+					<a href="lesson_09/index.html">Домашня робота №9</a>
+				</li>
 			</ul>
 		</div>
 	</body>
