--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 				<li>
 					<a href="lesson_09/index.html">Домашня робота №9</a>
 				</li>
+				<li>
+					<a href="lesson_10/index.html">Домашня робота №10</a>
+				</li>
 			</ul>
 		</div>
 	</body>
