--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -61,16 +61,15 @@
                 <div class="business">
                     <div class="business__container">
                         <div class="business__content technology">
-                            <div class="technology__image">
-                                <picture>
-                                    <source
-                                        srcset="img/girl-1x.avif 1x, img/girl-2x.avif 2x, img/girl-3x.avif 3x"
-                                        type="image/avif">
-                                    <img src="img/girl-1x.avif"
-                                        alt="Two young women sitting on the floor, focused on a laptop, engaged in conversation and sharing ideas.
+                            <picture class="technology__image">
+                                <source
+                                    srcset="img/girl-1x.avif 1x, img/girl-2x.avif 2x, img/girl-3x.avif 3x"
+                                    type="image/avif">
+                                <img src="img/girl-1x.avif"
+                                    alt="Two young women sitting on the floor, focused on a laptop, engaged in conversation and sharing ideas.
                                     ">
-                                </picture>
-                            </div>
+                            </picture>
+
                             <div class="technology__text text-technology">
                                 <h2 class="text-technology__title">The
                                     Industry's
@@ -105,15 +104,13 @@
                                 <a class="text-platform__link" href="#">Read the
                                     Documentation</a>
                             </div>
-                            <div>
-                                <picture class="platform__image">
-                                    <source
-                                        srcset="img/presentation-1x.avif 1x, img/presentation-2x.avif 2x, img/presentation-3x.avif 3x"
-                                        type="image/avif">
-                                    <img src="img/presentation-1x.avif"
-                                        alt="A diverse group of people collaborating around a table, each using a laptop for discussion and teamwork.">
-                                </picture>
-                            </div>
+                            <picture class="platform__image">
+                                <source
+                                    srcset="img/presentation-1x.avif 1x, img/presentation-2x.avif 2x, img/presentation-3x.avif 3x"
+                                    type="image/avif">
+                                <img src="img/presentation-1x.avif"
+                                    alt="A diverse group of people collaborating around a table, each using a laptop for discussion and teamwork.">
+                            </picture>
                         </div>
                     </div>
                 </div>
