--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 				<li>
 					<a href="lesson_10/index.html">Домашня робота №10</a>
 				</li>
+				<li>
+					<a href="lesson_13/index.html">Домашня робота №13</a>
+				</li>
 			</ul>
 		</div>
 	</body>
