--- a/lesson_08/index.html
+++ b/lesson_08/index.html
@@ -173,7 +173,7 @@
                             можна webp; додала способом, який не підтримує
                             Сафарі</h3>
                         <img
-                            srcset="img/couple-1x.avif 1x img/couple-2x.avif 2x, img/couple-3x.avif 3x"
+                            srcset="img/couple-1x.avif 1x, img/couple-2x.avif 2x, img/couple-3x.avif 3x"
                             src="img/couple-1x.avif"
                             alt="Хлопець та дівчина стоять з рюкзаками на вершині гори, дивляться на навколишні гори та долини.">
                     </div>
