--- a/lesson_09/index.html
+++ b/lesson_09/index.html
@@ -61,18 +61,13 @@
 
                 <div class="featured-products">
                     <div class="featured-products__container">
-                        <div
-                            class="featured-products__heading section-header">
+                        <div class="featured-products__heading section-header">
                             <h2 class="section-header__title h2-title">Featured
                                 Products</h2>
-                            <div class="section-header__link forward-btn">
-                                <a href="#" target="_blank">
-                                    View All
-                                </a>
-                                <a href="#" target="_blank">
-                                    <img src="img/forward.svg" alt="forward">
-                                </a>
-                            </div>
+                            <a class="section-header__link forward-btn"
+                                href="#">
+                                <img src="img/forward.svg" alt="forward">
+                            </a>
                         </div>
 
                         <div class="featured-products__items">
@@ -82,17 +77,16 @@
                                     src="img/apples.avif" alt="apples">
                                 <p class="card-item__text">Green Apple</p>
                                 <p class="card-item__price">$14.99</p>
-                                <p class="card-item__price--old">$20.99</p>
+                                <p
+                                    class="card-item__price card-item__price--old">$20.99</p>
                                 <img class="card-item__rating"
                                     src="img/rating.svg" alt="rating">
-                                <a class="card-item__btn" href="#"
-                                    target="_blank">
+                                <a class="card-item__cart" href="#">
                                     <img src="img/bag.svg" alt="bag">
                                 </a>
                             </div>
 
-                            <div
-                                class="featured-products__item card-item">
+                            <div class="featured-products__item card-item">
                                 <img class="card-item__img"
                                     src="img/chanise-cabbage.avif"
                                     alt="chanise cabbage">
@@ -100,14 +94,12 @@
                                 <p class="card-item__price">$14.99</p>
                                 <img class="card-item__rating"
                                     src="img/rating.svg" alt="rating">
-                                <a class="card-item__btn" href="#"
-                                    target="_blank">
+                                <a class="card-item__cart" href="#">
                                     <img src="img/bag.svg" alt="bag">
                                 </a>
                             </div>
 
-                            <div
-                                class="featured-products__item card-item">
+                            <div class="featured-products__item card-item">
                                 <img class="card-item__img"
                                     src="img/green-capsicum.avif"
                                     alt="green capsicum">
@@ -115,14 +107,12 @@
                                 <p class="card-item__price">$14.99</p>
                                 <img class="card-item__rating"
                                     src="img/rating.svg" alt="rating">
-                                <a class="card-item__btn" href="#"
-                                    target="_blank">
+                                <a class="card-item__cart" href="#">
                                     <img src="img/bag.svg" alt="bag">
                                 </a>
                             </div>
 
-                            <div
-                                class="featured-products__item card-item">
+                            <div class="featured-products__item card-item">
                                 <img class="card-item__img"
                                     src="img/ladies-finger.avif"
                                     alt="ladies finger">
@@ -130,8 +120,7 @@
                                 <p class="card-item__price">$14.99</p>
                                 <img class="card-item__rating"
                                     src="img/rating.svg" alt="rating">
-                                <a class="card-item__btn" href="#"
-                                    target="_blank">
+                                <a class="card-item__cart" href="#">
                                     <img src="img/bag.svg" alt="bag">
                                 </a>
                             </div>
@@ -141,8 +130,7 @@
 
                 <div class="categories">
                     <div class="categories__container">
-                        <div
-                            class="categories__heading section-header">
+                        <div class="categories__heading section-header">
                             <h2 class="section-header__title h2-title">Shop by
                                 Top Categories</h2>
                             <div class="section-header__link forward-btn">
@@ -235,14 +223,10 @@
                                 </li>
                             </ul>
 
-                            <div class="info__link">
-                                <a href="#" target="_blank">
-                                    Shop Now
-                                </a>
-                                <a href="#" target="_blank">
-                                    <img src="img/forward.svg" alt="forward">
-                                </a>
-                            </div>
+                            <a href="#" class="info__link button">
+                                Shop Now
+                                <img src="img/forward.svg" alt="forward">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -255,7 +239,6 @@
                     </p>
                 </div>
             </footer>
-
         </div>
 
     </body>
