--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -39,10 +39,9 @@
                                     </picture>
                                 </a>
                                 <div class="card-ecobazar__description">
-                                    <a
-                                        href="#"
-                                        class="card-ecobazar__title"><h3>Chanise
-                                            Cabbage</h3></a>
+                                    <h3 class="card-ecobazar__title">
+                                        <a href="#">Chanise
+                                            Cabbage</a></h3>
                                     <p class="card-ecobazar__price">$12.00</p>
                                     <img src="img/rating.svg" alt="rating">
                                     <a href="#">
@@ -75,14 +74,20 @@
                                     Industry's
                                     Top-Rated GRC and Audit Management
                                     Technology</h2>
-                                <p class="text-technology__text">Built to
-                                    provide the
-                                    efficiency, connectedness, and visibility
-                                    you need to stay ahead of today’s dynamic
-                                    risk environment. Built to provide the
-                                    efficiency, connectedness, and visibility
-                                    you need to stay ahead of today’s dynamic
-                                    risk environment.</p>
+                                <div class="text-technology__text">
+                                    <p>Built to
+                                        provide the
+                                        efficiency, connectedness, and
+                                        visibility
+                                        you need to stay ahead of today’s
+                                        dynamic
+                                        risk environment. Built to provide the
+                                        efficiency, connectedness, and
+                                        visibility
+                                        you need to stay ahead of today’s
+                                        dynamic
+                                        risk environment.</p>
+                                </div>
                                 <a class="text-technology__link" href="#">Read
                                     the
                                     Documentation</a>
@@ -94,13 +99,18 @@
                                 <h2 class="text-platform__title">Explore the
                                     Modern Connected Risk Platform
                                 </h2>
-                                <p class="text-platform__text">Built to provide
-                                    the efficiency, connectedness, and
-                                    visibility you need to stay ahead of today’s
-                                    dynamic risk environment. Built to provide
-                                    the efficiency, connectedness, and
-                                    visibility you need to stay ahead of today’s
-                                    dynamic risk environment.</p>
+                                <div class="text-platform__text">
+                                    <p>Built to provide
+                                        the efficiency, connectedness, and
+                                        visibility you need to stay ahead of
+                                        today’s
+                                        dynamic risk environment. Built to
+                                        provide
+                                        the efficiency, connectedness, and
+                                        visibility you need to stay ahead of
+                                        today’s
+                                        dynamic risk environment.</p>
+                                </div>
                                 <a class="text-platform__link" href="#">Read the
                                     Documentation</a>
                             </div>
