add some changes in homework #13

--- a/lesson_13/index.html
+++ b/lesson_13/index.html
@@ -87,7 +87,8 @@
                                 California</strong></h2>
                         <div class="advantages__items">
                             <div class="advantages__item item">
-                                <img class=item__img src="img/presentation.svg"
+                                <img class="item__img"
+                                    src="img/presentation.svg"
                                     alt="presentation">
                                 <div class="item__text">
                                     <span>2000+</span>
@@ -96,7 +97,7 @@
                             </div>
 
                             <div class="advantages__item item">
-                                <img class=item__img src="img/award.svg"
+                                <img class="item__img" src="img/award.svg"
                                     alt="award">
                                 <div class="item__text">
                                     <span>10 Years +</span>
@@ -105,7 +106,7 @@
                             </div>
 
                             <div class="advantages__item item">
-                                <img class=item__img src="img/list.svg"
+                                <img class="item__img" src="img/list.svg"
                                     alt="list">
                                 <div class="item__text">
                                     <span>10+</span>
@@ -114,7 +115,7 @@
                             </div>
 
                             <div class="advantages__item item">
-                                <img class=item__img src="img/book.svg"
+                                <img class="item__img" src="img/book.svg"
                                     alt="book">
                                 <div class="item__text">
                                     <span>100+</span>
